# Stock-Market-Simulator-Flask

./: data.sqlite  functions.py  main.py  pyproject.toml  pyproject.toml.backup  replit_zip_error_log.txt  shares.txt
.cache/jedi/CPython-38-33/: 3a13d179562a86c5f6456c95af271add150672f2dbf91d5d71bc1d6e03c8bc12-0672c11827546c5f2db3ed96c7caafceb40b17303874310262a4904d39fda29b.pkl  3a13d179562a86c5f6456c95af271add150672f2dbf91d5d71bc1d6e03c8bc12-08ced4dff8df9930c0a67332fcda7596eca6936984f38ce72c262fc55b790d78.pkl  3a13d179562a86c5f6456c95af271add150672f2dbf91d5d71bc1d6e03c8bc12-09c7db41d3d1cbebcedad446e4db100d88c209f26566a0ec258772839513e438.pkl  3a13d179562a86c5f6456c95af271add150672f2dbf91d5d71bc1d6e03c8bc12-26c36033a52a1ae604590ab50dd22a663d09f703d87a0691615fc2feac800c82.pkl  3a13d179562a86c5f6456c95af271add150672f2dbf91d5d71bc1d6e03c8bc12-2ff6f23bb99001ceeeb6720a65db9215e79d353656d594e95df5cf78021680c8.pkl  3a13d179562a86c5f6456c95af271add150672f2dbf91d5d71bc1d6e03c8bc12-3ae071969275ab2a4a428d0aa1b6e8a34af62e3949ed22805e4376d7beb4afce.pkl  3a13d179562a86c5f6456c95af271add150672f2dbf91d5d71bc1d6e03c8bc12-3e24177069ec4e00044b50933258584d87fa7c9341be93b3ce351ed19d7d643b.pkl  (+19 more)
.cache/nix/: binary-cache-v6.sqlite  fetcher-cache-v1.sqlite
.cache/replit/: __replit_disk_meta.json
.cache/replit/env/: latest  latest.json
.upm/: store.json
migrations/versions/: 7d91f74477cc_testing_done.py
templates/: 404.html  500.html  account.html  admin.html  base.html  buy.html  home.html  leaderboard.html  login.html  portfolio.html  register.html  sell.html  shares.html
