[tool.poetry]
name = "repl_python3_Share-Market-Flask"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.0.1"
flask-wtf = "^0.15.1"
wtforms = "^2.3.3"
flask-sqlalchemy = "^2.5.1"
flask-migrate = "^3.0.1"
werkzeug = "^2.0.1"
flask-login = "^0.5.0"
email-validator = "^1.1.2"
sqlalchemy = "^1.4.17"
alembic = "^1.6.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"